# SportBook

./: .env  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/dev/: development.ipynb  testing.ipynb
backend/dev/tables/: provider_items.csv  users.csv
backend/routers/: admins.py  app.py  users.py
backend/utils/: connections.py
data/tables/: inventory.csv  items.csv  requests.csv  user_inventory.csv
frontend/: Dockerfile  envars.py  main.py  pyproject.toml  requirements.txt
frontend/app/: home.py  inventory_management.py  login.py  logout.py  request_processing.py  supply.py  user_inventory.py  user_management.py
frontend/utils/: data_processing.py
init/: db_init.sql  import_tables.sh
