[tool.poetry]
name = "sportbook-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
pandas = "^2.2.3"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
